Changing css paragraphs

--- a/index.html
+++ b/index.html
@@ -70,9 +70,10 @@
         <h3>CSS style guide</h3>
         
         <h4>Naming Conventions</h4>
+        <p>Fill this stuff out</p>
         
         <h4>Spacing and Braces</h4>
-        <p>Use semicolons.<p>
+        <p>Fill this stuff out</p>
 
       </section>
     </div>
