Established CSS style guid esection

--- a/index.html
+++ b/index.html
@@ -65,10 +65,25 @@ function function_name( $argument = null )
 
 $variable_name = new TestThing(); //Non-object and objects
 </code></pre>
-        
+
+  <h3>CSS Style Guide</h3>
+  <h4>Layout</h4>
+  <p>Use the minimalistic approach with stylesheets. Styles should be on one line, separated by spaces.
+    <pre><code>
+      body {font-family: sans-serif; background: #000;}
+      h1, h2, h3, h4 {font-weight: bold; text-transform: capitalize;}
+      h1 {font-size: 1.6em;}
+    </code></pre>
+
+  <h4>General Tips</h4>
+  <ul>
+    <li>Do not specify a font family for body text. Instead, just use serif or sans-serif.</li>
+    <li>Use inline styles as never as possible.</li>
+  </ul>
+
 
       </section>
-    </div>
+    </div> <!-- /main_content_wrap -->
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
