--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ $variable_name = new TestThing(); //Non-object and objects
         <!-- django -->
         <h2>django</h2>
         <p></p>
-        <pre><code class="django"># Chris, put something here...</code></pre>
+        <pre><code class="python"># Chris, put something here...</code></pre>
         <!-- End django -->
         
         
