snake_case terminology

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         
         <!-- php Styles -->
         <h2>php</h2>
-        <p>Use Camel case for class properties and methods. Underscores for normal variables and static method names.</p> 
+        <p>Use Camel case for class properties and methods. Use snake_case for normal variables and static method names.</p> 
         <p>Set tabs to always be spaces, and use 4 spaces per indent.</p>
         <p>Use the Allman style for curly braces for class and function definitions.  The curly brace should be on the next line by itself.</p>
 
