Updates Objective-C section

--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@ $variable_name = new TestThing(); //Non-object and objects
             Module names should be camel cased. Pretty much everything can be containted in a single app (which by convention is named frontend).</p>
 
         <h4>Sample</h4>
-        <pre><code class="symfony">// Erick, put something here...</code></pre>
+        <pre><code class="symfony">// Put something here...</code></pre>
 
 
 
         <!-- Ruby on Rails -->
         <h2>Ruby on Rails</h2>
-        <pre><code class="ror"># Chris, put something here...</code></pre>
+        <pre><code class="ror"># Put something here...</code></pre>
         <!-- End Ruby on Rails -->
 
 
@@ -117,7 +117,9 @@ h2 {font-size: 1.6em;}
         <h2>Objective-C</h2>
         <p>Use Pascal case for classes. Camel case constants and prefix with the letter k. Underscores for instance variables</p>
         <p>Set tabs to always be spaces, and use 4 spaces per indent. (Xcode defaults)</p>
-        <p>Typically custom classes (which aren't view controllers) and protocols with a two letter abbreviation of the organization to tip your hat to NeXTSTEP</p>
+        <p>Typically custom classes (which aren't view controllers) and protocols begin with a <em>two</em> or <em>three</em> letter abbreviation of the organization to tip your hat to NeXTSTEP.</p>
+
+        <pre>Note: Cocoapods recommends a three letter abbreviation to further prevent the collision of class names.</pre>
 
         <h4>Sample</h4>
 
