--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@ $variable_name = new TestThing(); //Non-object and objects
         </ul>
 
         <h4>Sample</h4>
-        <pre><code class="css">body {font-family: sans-serif; background: #000;}
+        <pre><code class="css">
+body {font-family: sans-serif; background: #000;}
 h2, h2, h2, h2 {font-weight: bold; text-transform: capitalize;}
 h2 {font-size: 1.6em;}
         </code></pre>
